2009-04-09  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net.dll.sources: Remove classes that are not in the 
	final SL2 release

2009-03-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Net.dll.sources: Added WriteStreamClosedEventArgs_2_1.cs
	  and WriteStreamClosedEventHandler_2_1.cs

2009-02-24  Alan McGovern  <amcgovern@novell.com>

	* System.Net/WebClient_2_1.cs: If we're getting text, ensure we
	strip out the byte order mark if it exists.

2009-01-21  Jb Evain  <jbevain@novell.com>

	* System.Net/WebClient_2_1.cs: use the length of the stream
	instead of the ContentLength that is different for gzipped stream.

2008-09-16  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net.dll.sources: Add new security-socket related files.

2008-07-31  Jb Evain  <jbevain@novell.com>

	* System.Net.dll.sources: fine tune.

2008-07-14  Marek Habersack  <mhabersack@novell.com>

	* System.Net.dll.sources: added
	System.Net.NetworkInformation/LinuxNetworkInterfaceMarshal.cs

2008-04-13  Jb Evain  <jbevain@novell.com>

	* System.Net: new assembly in SL 2b1.
	Merged from the Moonlight 2 branch.