@@ -1,25 +1,26 @@
 ../../build/common/Consts.cs
 ../../build/common/Locale.cs
 ../../build/common/MonoTODOAttribute.cs
-../corlib/System/ICloneable.cs
-../corlib/System.Collections/ArrayList.cs
-../corlib/System.Collections/Comparer.cs
-../corlib/System.Collections/Queue.cs
 DummySystemNet.cs
+Assembly/AssemblyInfo.cs
 System.Net/DnsEndPoint_2_1.cs
 System.Net/HttpWebRequest_2_1.cs
 System.Net/HttpWebResponse_2_1.cs
+System.Net/HttpStatusCode_2_1.cs
+System.Net/WebExceptionStatus_2_1.cs
 System.Net/WebHeaderCollection_2_1.cs
 System.Net/WebClient_2_1.cs
 System.Net/WebRequest_2_1.cs
 System.Net/WebResponse_2_1.cs
 System.Net/WriteStreamClosedEventArgs_2_1.cs
 System.Net/WriteStreamClosedEventHandler_2_1.cs
+System.Net.Sockets/AddressFamily_2_1.cs
 System.Net.Sockets/SocketException_2_1.cs
-../System/Assembly/AssemblyInfo.cs
+System.Net.Sockets/ProtocolType_2_1.cs
+System.Net.Sockets/SocketAsyncOperation_2_1.cs
+System.Net.Sockets/SocketType_2_1.cs
 ../System/System.Net/AuthenticationSchemes.cs
 ../System/System.Net/AuthenticationSchemeSelector.cs
-../System/System.Net/Authorization.cs
 ../System/System.Net.Cache/HttpCacheAgeControl.cs
 ../System/System.Net.Cache/HttpRequestCacheLevel.cs
 ../System/System.Net.Cache/HttpRequestCachePolicy.cs
@@ -30,25 +31,16 @@ System.Net.Sockets/SocketException_2_1.cs
 ../System/System.Net/CookieContainer.cs
 ../System/System.Net/Cookie.cs
 ../System/System.Net/CookieException.cs
-../System/System.Net/CredentialCache.cs
-../System/System.Net/DecompressionMethods.cs
 ../System/System.Net/Dns.cs
 ../System/System.Net/EndPoint.cs
-../System/System.Net/EndPointListener.cs
-../System/System.Net/EndPointManager.cs
 ../System/System.Net/HttpConnection.cs
 ../System/System.Net/HttpContinueDelegate.cs
 ../System/System.Net/HttpRequestCreator.cs
 ../System/System.Net/HttpRequestHeader.cs
 ../System/System.Net/HttpResponseHeader.cs
-../System/System.Net/HttpStatusCode.cs
 ../System/System.Net/HttpStreamAsyncResult.cs
 ../System/System.Net/HttpUtility.cs
 ../System/System.Net/HttpVersion.cs
-../System/System.Net/IAuthenticationModule.cs
-../System/System.Net/ICredentialLookup.cs
-../System/System.Net/ICredentialPolicy.cs
-../System/System.Net/ICredentialsByHost.cs
 ../System/System.Net/IPAddress.cs
 ../System/System.Net/IPEndPoint.cs
 ../System/System.Net/IPHostEntry.cs
@@ -64,7 +56,6 @@ System.Net.Sockets/SocketException_2_1.cs
 ../System/System.Net/MonoHttpDate.cs
 ../System/System.Net/NetConfig.cs
 ../System/System.Net/NetworkAccess.cs
-../System/System.Net/NetworkCredential.cs
 ../System/System.Net.NetworkInformation/DuplicateAddressDetectionState.cs
 ../System/System.Net.NetworkInformation/GatewayIPAddressInformationCollection.cs
 ../System/System.Net.NetworkInformation/GatewayIPAddressInformation.cs
@@ -104,31 +95,26 @@ System.Net.Sockets/SocketException_2_1.cs
 ../System/System.Net.NetworkInformation/UnicastIPAddressInformationCollection.cs
 ../System/System.Net.NetworkInformation/UnicastIPAddressInformation.cs
 ../System/System.Net.NetworkInformation/Win32NetworkInterfaceMarshal.cs
-../System/System.Net/NtlmClient.cs
 ../System/System.Net/ProtocolViolationException.cs
 ../System/System.Net/RequestStream.cs
 ../System/System.Net/ResponseStream.cs
 ../System/System.Net.Security/AuthenticatedStream.cs
 ../System/System.Net.Security/AuthenticationLevel.cs
 ../System/System.Net.Security/LocalCertificateSelectionCallback.cs
-../System/System.Net.Security/NegotiateStream.cs
 ../System/System.Net.Security/ProtectionLevel.cs
 ../System/System.Net/SecurityProtocolType.cs
 ../System/System.Net.Security/RemoteCertificateValidationCallback.cs
 ../System/System.Net.Security/SslStream.cs
 ../System/System.Net.Security/SslPolicyErrors.cs
 ../System/System.Net/SocketAddress.cs
-../System/System.Net.Sockets/AddressFamily.cs
 ../System/System.Net.Sockets/IOControlCode.cs
 ../System/System.Net.Sockets/IPv6MulticastOption.cs
 ../System/System.Net.Sockets/IPPacketInformation.cs
 ../System/System.Net.Sockets/LingerOption.cs
 ../System/System.Net.Sockets/MulticastOption.cs
-../System/System.Net.Sockets/NetworkStream.cs
 ../System/System.Net.Sockets/ProtocolFamily.cs
-../System/System.Net.Sockets/ProtocolType.cs
 ../System/System.Net.Sockets/SelectMode.cs
-../System/System.Net.Sockets/Socket.cs
+../System/System.Net.Sockets/Socket_2_1.cs
 ../System/System.Net.Sockets/SocketError.cs
 ../System/System.Net.Sockets/SocketFlags.cs
 ../System/System.Net.Sockets/SocketInformation.cs
@@ -136,18 +122,12 @@ System.Net.Sockets/SocketException_2_1.cs
 ../System/System.Net.Sockets/SocketOptionLevel.cs
 ../System/System.Net.Sockets/SocketOptionName.cs
 ../System/System.Net.Sockets/SocketShutdown.cs
-../System/System.Net.Sockets/SocketType.cs
-../System/System.Net.Sockets/TcpClient.cs
-../System/System.Net.Sockets/TcpListener.cs
 ../System/System.Net.Sockets/TransmitFileOptions.cs
-../System/System.Net.Sockets/UdpClient.cs
 ../System/System.Net.Sockets/SendPacketsElement.cs
 ../System/System.Net.Sockets/SocketAsyncEventArgs.cs
-../System/System.Net.Sockets/SocketAsyncOperation.cs
 ../System/System.Net/TransportType.cs
 ../System/System.Net/WebAsyncResult.cs
 ../System/System.Net/WebException.cs
-../System/System.Net/WebExceptionStatus.cs
 ../System/System.Net/WebRequestMethods.cs
 ../System/System.Net/UploadDataCompletedEventArgs.cs
 ../System/System.Net/UploadFileCompletedEventArgs.cs
